--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -55,3 +55,23 @@ body {
 .autocomplete-suggestion:hover {
   background-color: #f0f0f0;
 }
+
+.tooltip {
+  transition: opacity 0.2s ease;
+}
+
+.career-highs-table {
+  max-height: 410px;
+  overflow-y: auto;
+  overflow-x: auto;
+  position: relative;
+}
+
+.career-highs-table thead tr th {
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 1020;
+  text-align: center;
+  vertical-align: middle;
+}
