--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -95,3 +95,21 @@ body {
   margin: 2px;
   margin-bottom: 10px;
 }
+
+.item {
+  height: 310px;
+  border-radius: 16px;
+  background: #fff1d5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #604652;
+  font-size: 102px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
